--- a/views/vacature.liquid
+++ b/views/vacature.liquid
@@ -7,6 +7,7 @@
         <h1>{{ vacatures.title }}</h1>
         <p>{{ vacatures.locatie }}</p>
     </div>
+    <img class="sfeerphoto" src="https://fdnd-agency.directus.app/assets/{{ vacatures.photo }}" width="{{ vacatures.width }}" height="{{ vacatures.height }}" alt="sfeerfoto">
     <p>{{ vacatures.description | downcase }}</p>
 </main>
 
