--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -4,7 +4,7 @@
 
 <aside>
     <a href="/vacatures">
-        <img src="assets/arrow-left.svg" alt="arrow">
+        <img src="assets/arrow-left.svg" width="17" height="16" alt="arrow">
         terug naar home
     </a>
     <h1>Vacatures</h1>
