--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -35,7 +35,7 @@
                 <option value="Noord-Brabant">Noord-Brabant</option>
                 <option value="Zeeland">Zeeland</option>
             </select>
-            <span><img src="assets/plus.svg" alt="plus-icon"></span>
+            <span><img src="assets/plus.svg" width="24" height="24" alt="plus-icon"></span>
         </div>
 
         <div class="select-container">
@@ -44,9 +44,9 @@
                 <option value="">soort</option>
                 <option value="vacature">vacature</option>
                 <option value="stage">stage</option>
-                <span><img src="assets/plus.svg" alt="plus-icon"></span>
+                <span><img src="assets/plus.svg" width="24" height="24" alt="plus-icon"></span>
             </select>
-            <span><img src="assets/plus.svg" alt="plus-icon"></span>
+            <span><img src="assets/plus.svg" width="24" height="24" alt="plus-icon"></span>
         </div>
 
         <div class="select-container">
@@ -57,9 +57,9 @@
                 <option value="32">32</option>
                 <option value="16">16</option>
                 <option value="anders">anders</option>
-                <span><img src="assets/plus.svg" alt="plus-icon"></span>
+                <span><img src="assets/plus.svg" width="24" height="24" alt="plus-icon"></span>
             </select>
-            <span><img src="assets/plus.svg" alt="plus-icon"></span>
+            <span><img src="assets/plus.svg" width="24" height="24" alt="plus-icon"></span>
         </div>
 
         <div class="select-container">
@@ -69,9 +69,9 @@
                 <option value="nl">nl</option>
                 <option value="eng">eng</option>
                 <option value="eng-nl">eng & nl</option>
-                <span><img src="assets/plus.svg" alt="plus-icon"></span>
+                <span><img src="assets/plus.svg" width="24" height="24" alt="plus-icon"></span>
             </select>
-            <span><img src="assets/plus.svg" alt="plus-icon"></span>
+            <span><img src="assets/plus.svg" width="24" height="24" alt="plus-icon"></span>
         </div>
 
         <button type="submit">Submit</button>
