--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -90,7 +90,7 @@
                 <span>{{ vacature.hours }} uur</span>
                 <span>{{ vacature.locatie }}</span>
             </div>
-            <a href="vacature/{{ vacature.id }}">bekijken <img src="assets/blue-arrow-up.svg" alt="pijltje"></a>
+            <a href="vacature/{{ vacature.id }}">bekijken <img src="assets/blue-arrow-up.svg" width="16" height="16" alt="pijltje"></a>
         </li>
         {% endfor %}
         {% else %}
