Layout shift (logo.svg) #3

--- a/views/partials/header.liquid
+++ b/views/partials/header.liquid
@@ -1,6 +1,6 @@
 <header>
     <a href="/">
-    <img src="../assets/logo.svg" alt="Logo" class="logo">
+    <img src="../assets/logo.svg" width="107" height="80" alt="Logo" class="logo">
     </a>
     <nav>
         <div class="hidden-menu">
