--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -99,7 +99,7 @@
     </ul>
     <details class="add-vacancie">
         <summary>Vacature toevoegen</summary>
-        <form class="form-container" action="/" method="post" data-enhanced="form-{{ id }}">
+        <form class="form-container" action="/" method="post" data-enhanced="form">
             <button class="close-btn">close</button>
 
             <label for="titel">titel</label>
@@ -120,6 +120,9 @@
             <button class="submit" type="submit">submit</button>
         </form>
     </details>
+
+    {% assign succes_message = false %}
+
     {% if succes_message %}
     <div class="succes-box">
         <h6>Succes!</h6>
@@ -130,25 +133,18 @@
 
 <script type="module">
 
-// We maken hieronder aannames over wat de browser ondersteunt
-// Dus laten we deze eerst testen met Feature Detection
-// https://developer.mozilla.org/en-US/docs/Learn_web_development/Extensions/Testing/Feature_detection
-if ('fetch' in window && 'DOMParser' in window) {
-
   // Als er ergens op de pagina een formulier wordt gesubmit..
   // (We maken hier gebruik van Event Delegation)
   document.addEventListener('submit', async function(event) {
 
     // Hou in een variabele bij welk formulier dat was
     const form = event.target
-    const button = document.querySelector('.submit')
 
-    // Als dit formulier geen data-enhanced attribuut heeft, doe dan niks
+    // Als dit formulier geen data-enhanced attribuut heeft, doe dan niks speciaals (laat het formulier normaal versturen)
     // Dit doen we, zodat we sommige formulieren op de pagina kunnen 'enhancen'
-    // Data attributen mag je zelf verzinnen; dit is dus niet iets speciaals
-    // https://developer.mozilla.org/en-US/docs/Learn_web_development/Howto/Solve_HTML_problems/Use_data_attributes
+    // Door ze bijvoorbeeld data-enhanced="true" of data-enhanced="formulier-3" te geven.
+    // Data attributen mag je zelf verzinnen: https://developer.mozilla.org/en-US/docs/Learn_web_development/Howto/Solve_HTML_problems/Use_data_attributes
     if (!form.hasAttribute('data-enhanced')) {
-        
       return
     }
 
@@ -156,17 +152,34 @@ if ('fetch' in window && 'DOMParser' in window) {
     // Let op: hiermee overschrijven we de default Loading state van de browser...
     event.preventDefault()
 
-    button.classList.add('loading')
-    button.textContent = "Laden...";
+    // form.classList.add('loading')
+
+    // Verzamel alle formuliervelden van het formulier
+    let formData = new FormData(form)
+
+    // En voeg eventueel de name en value van de submit button toe aan die data
+    // https://developer.mozilla.org/en-US/docs/Web/API/SubmitEvent/submitter
+    // if (event.submitter) {
+    //   formData.append(event.submitter.name, event.submitter.value)
+    // }
+
+    console.log(form.children)
 
     // Doe een fetch naar de server, net als hoe de browser dit normaal zou doen
     // Gebruik daarvoor het action en method attribuut van het originele formulier
-    // Inclusief alle formulierelementen
+    // Inclusief alle formuliervelden
     const response = await fetch(form.action, {
       method: form.method,
-      body: new URLSearchParams(new FormData(form))
+      body: new URLSearchParams({
+        title: "joe",
+        language: "joe",
+        agency_id: "joe",
+        hours: "joe",
+        locatie: "joe"
+      })
     })
 
+    console.log(response)
     // De server redirect op de normale manier, en geeft HTML terug
     // (De server weet niet eens dat deze fetch via client-side JavaScript gebeurde)
     const responseText = await response.text()
@@ -176,35 +189,24 @@ if ('fetch' in window && 'DOMParser' in window) {
     const parser = new DOMParser()
     const responseDOM = parser.parseFromString(responseText, 'text/html')
 
-    // Zoek in die nieuwe DOM onze nieuwe state op, die we via Liquid hebben klaargemaakt
-    // We gebruiken hiervoor het data-enhanced attribuut, zodat we weten waar we naar moeten zoeken
+    console.log(responseDOM)
+
+    // Zoek in die nieuwe HTML DOM onze nieuwe UI state op, die we via Liquid hebben klaargemaakt
+    // We gebruiken hiervoor het eerdere data-enhanced attribuut, zodat we weten waar we naar moeten zoeken
+    // In de nieuwe HTML zoeken we bijvoorbeeld naar data-enhanced="true" of data-enhanced="formulier-3"
     // (Hierdoor kunnen we ook meerdere formulieren op dezelfde pagina gebruiken)
     const newState = responseDOM.querySelector('[data-enhanced="' + form.getAttribute('data-enhanced') + '"]')
+
+    form.classList.remove('loading')
+
+    // succes state
+    newState.classList.add('succes')
 
     // Overschrijf ons formulier met de nieuwe HTML
     // Hier wil je waarschijnlijk de Loading state vervangen door een Success state
     form.outerHTML = newState.outerHTML
 
-    button.classList.remove('loading')
-    button.textContent = "verstuurd";
-
-
   })
-}
-
-const details = document.querySelector('details')
-const closeBtn = document.querySelector('.close-btn')
-
-closeBtn.addEventListener('click', function(e){
-    details.removeAttribute('open')
-})
-
-document.addEventListener('click', function(e){
-    if(!details.contains(e.target)){
-        details.removeAttribute('open')
-        console.log('closed')
-    }
-})
 
 </script>
 
