--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -117,7 +117,7 @@
             <label for="location">location</label>
             <input required type="text" name="location">
 
-            <button class="submit" type="submit">submit</button>
+            <button class="submit-form" type="submit">submit</button>
         </form>
     </details>
 
@@ -163,23 +163,14 @@
     //   formData.append(event.submitter.name, event.submitter.value)
     // }
 
-    console.log(form.children)
-
     // Doe een fetch naar de server, net als hoe de browser dit normaal zou doen
     // Gebruik daarvoor het action en method attribuut van het originele formulier
     // Inclusief alle formuliervelden
     const response = await fetch(form.action, {
       method: form.method,
-      body: new URLSearchParams({
-        title: "joe",
-        language: "joe",
-        agency_id: "joe",
-        hours: "joe",
-        locatie: "joe"
-      })
+      body: new URLSearchParams(formData)
     })
 
-    console.log(response)
     // De server redirect op de normale manier, en geeft HTML terug
     // (De server weet niet eens dat deze fetch via client-side JavaScript gebeurde)
     const responseText = await response.text()
@@ -196,6 +187,7 @@
     // In de nieuwe HTML zoeken we bijvoorbeeld naar data-enhanced="true" of data-enhanced="formulier-3"
     // (Hierdoor kunnen we ook meerdere formulieren op dezelfde pagina gebruiken)
     const newState = responseDOM.querySelector('[data-enhanced="' + form.getAttribute('data-enhanced') + '"]')
+    const newVacancie = responseDOM.querySelector('.vacancies li')
 
     form.classList.remove('loading')
 
@@ -205,6 +197,10 @@
     // Overschrijf ons formulier met de nieuwe HTML
     // Hier wil je waarschijnlijk de Loading state vervangen door een Success state
     form.outerHTML = newState.outerHTML
+    let newVacancies = document.querySelector('.vacancies')
+    newVacancies.insertAdjacentHTML("beforeend", newVacancie.outerHTML);
+
+    console.log(newVacancies)
 
   })
 
