Form aangepast en details kan je nu weer closen #2

--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -100,13 +100,10 @@
     <details class="add-vacancie">
         <summary>Vacature toevoegen</summary>
         <form class="form-container" action="/" method="post" data-enhanced="form">
-            <button class="close-btn">close</button>
+            <button class="close-btn" type="button">close</button>
 
             <label for="titel">titel</label>
             <input required type="text" name="title">
-
-            <label for="language">language</label>
-            <input required type="text" name="language">
 
             <label for="agency_id">agency id fdnd=90 </label>
             <input required type="text" name="agency_id">
