--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -118,14 +118,11 @@
         </form>
     </details>
 
-    {% assign succes_message = false %}
-
-    {% if succes_message %}
     <div class="succes-box">
         <h6>Succes!</h6>
-        <p class="succes-message">{{ succes_message }}</p>
+        <p class="succes-message">Vacature toegevoegd!</p>
     </div>
-    {% endif %}
+
 </main>
 
 <script type="module">
@@ -136,6 +133,7 @@
 
     // Hou in een variabele bij welk formulier dat was
     const form = event.target
+    const submitBtn = document.querySelector('.submit-form')
 
     // Als dit formulier geen data-enhanced attribuut heeft, doe dan niks speciaals (laat het formulier normaal versturen)
     // Dit doen we, zodat we sommige formulieren op de pagina kunnen 'enhancen'
@@ -149,7 +147,7 @@
     // Let op: hiermee overschrijven we de default Loading state van de browser...
     event.preventDefault()
 
-    // form.classList.add('loading')
+    submitBtn.innerHTML = 'Aan het toevoegen...';
 
     // Verzamel alle formuliervelden van het formulier
     let formData = new FormData(form)
@@ -187,20 +185,18 @@
     const newVacancie = responseDOM.querySelector('.vacancies li:last-of-type')
     const details = document.querySelector("details");
 
-    form.classList.remove('loading')
+    submitBtn.innerHTML = 'submit';
     details.removeAttribute('open')
 
     // succes state
-    newState.classList.add('succes')
+    const succesBox = document.querySelector('.succes-box')
+    succesBox.classList.add('show')
 
     // Overschrijf ons formulier met de nieuwe HTML
     // Hier wil je waarschijnlijk de Loading state vervangen door een Success state
     form.outerHTML = newState.outerHTML
     let newVacancies = document.querySelector('.vacancies')
     newVacancies.insertAdjacentHTML("beforeend", newVacancie.outerHTML);
-
-    console.log(newVacancies)
-
   })
 
 </script>
