--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -83,7 +83,7 @@
         {% for agency in vacatures %}
         {% for vacature in agency.vacancies %}
         <li>
-            <h2>{{ vacature.title }}</h2>
+            <h2 style="view-transition-name: vacature-{{ vacature.id }}">{{ vacature.title }}</h2>
             <div>
                 <span>ENG & NL</span>
                 <span class="agency-title">{{ agency.title|title }}</span>
