--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -91,6 +91,12 @@
                 <span>{{ vacature.locatie }}</span>
             </div>
             <a href="vacature/{{ vacature.id }}">bekijken <img src="assets/blue-arrow-up.svg" width="16" height="16" alt="pijltje"></a>
+
+            <form action="/delete/{{ vacature.id }}" method="POST">
+                <input type="hidden" name="vacature_id" value="{{ vacature.id }}">
+                <button type="submit">delete</button>
+            </form>
+
         </li>
         {% endfor %}
         {% else %}
