--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -196,7 +196,7 @@
 
     // succes state
     const succesBox = document.querySelector('.succes-box')
-    succesBox.classList.add('show')
+    succesBox.classList.add('active')
 
     // Overschrijf ons formulier met de nieuwe HTML
     // Hier wil je waarschijnlijk de Loading state vervangen door een Success state
