--- a/public/style.css
+++ b/public/style.css
@@ -365,6 +365,10 @@ footer {
     border: var(--border);
     background-color: white;
     & .submit-form {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1em;
         margin-top: var(--spacing-24);
         background-color: white;
         padding: var(--spacing-16);
@@ -391,6 +395,28 @@ footer {
     }
 }
 
+.loader {
+    display: none;
+    border: 3px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 3px solid #3498db;
+    width: 20px;
+    height: 20px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+    &.show {
+        animation-play-state: running;
+    }
+    &.hide {
+        animation-play-state: paused;
+    }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 .succes-box {
     display: none;
     position: fixed;
@@ -414,9 +440,5 @@ footer {
     &.show {
         display: block;
         opacity: 1;
-    }
-    &.fade-out {
-        display: none;
-        opacity: 0;
     }
 }
