--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -121,7 +121,10 @@
             <label for="location">location</label>
             <input required type="text" name="location">
 
-            <button class="submit-form" type="submit">submit</button>
+            <button class="submit-form" type="submit">
+                <div class="loader"></div>
+                <span class="btn-text">submit</span>
+            </button>
         </form>
     </details>
 
@@ -141,6 +144,8 @@
     // Hou in een variabele bij welk formulier dat was
     const form = event.target
     const submitBtn = document.querySelector('.submit-form')
+    const loader = submitBtn.querySelector('.loader')
+    const btnTxt = submitBtn.querySelector('.btn-text')
 
     // Als dit formulier geen data-enhanced attribuut heeft, doe dan niks speciaals (laat het formulier normaal versturen)
     // Dit doen we, zodat we sommige formulieren op de pagina kunnen 'enhancen'
@@ -154,7 +159,11 @@
     // Let op: hiermee overschrijven we de default Loading state van de browser...
     event.preventDefault()
 
+
     submitBtn.innerHTML = 'Aan het toevoegen...';
+    loader.classList.add('show');
+    loader.classList.remove('hide');
+
 
     // Verzamel alle formuliervelden van het formulier
     let formData = new FormData(form)
@@ -195,15 +204,24 @@
     submitBtn.innerHTML = 'submit';
     details.removeAttribute('open')
 
-    // succes state
-    const succesBox = document.querySelector('.succes-box')
-    succesBox.classList.add('active')
+    // loading state weg
+    loader.classList.remove('show');
+    loader.classList.add('hide');
 
     // Overschrijf ons formulier met de nieuwe HTML
     // Hier wil je waarschijnlijk de Loading state vervangen door een Success state
     form.outerHTML = newState.outerHTML
     let newVacancies = document.querySelector('.vacancies')
     newVacancies.insertAdjacentHTML("beforeend", newVacancie.outerHTML);
+
+    // succes state toegevoegd
+    const succesBox = document.querySelector('.succes-box')
+    succesBox.classList.add('show')
+
+    setTimeout(() => {
+        succesBox.classList.remove('show');
+    }, 2400);
+
   })
 
 </script>
