--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -160,7 +160,7 @@
     event.preventDefault()
 
 
-    submitBtn.innerHTML = 'Aan het toevoegen...';
+    btnTxt.innerHTML = 'Aan het toevoegen...';
     loader.classList.add('show');
     loader.classList.remove('hide');
 
