Leeg salaris fix #6
Als er nu een salaris leeg is staat er wel alsnog een salaris om het mooier te houden. Met een if else statement.

--- a/public/vacature.css
+++ b/public/vacature.css
@@ -19,7 +19,7 @@
         }
         & p {
             font-family: var(--secondary-font);
-            font-size: .75rem;
+            font-size: .895rem;
         }
     }
     & h1 {
@@ -56,3 +56,20 @@
     }
 }
 
+aside {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+    padding: 1em;
+    border-top: var(--border);
+    & h2 {
+    }
+    & a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: .25em;
+    }
+}
