--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -2,7 +2,7 @@
 
 {% render 'partials/header.liquid' %}
 
-<aside>
+<aside class="hero">
     <a href="/vacatures">
         <img src="assets/arrow-left.svg" width="17" height="16" alt="arrow">
         terug naar home
@@ -83,7 +83,7 @@
         {% for agency in vacatures %}
         {% for vacature in agency.vacancies %}
         <li>
-            <h2 style="view-transition-name: vacature-{{ vacature.id }}">{{ vacature.title }}</h2>
+            <h2>{{ vacature.title }}</h2>
             <div>
                 <span>ENG & NL</span>
                 <span class="agency-title">{{ agency.title|title }}</span>
