--- a/public/vacature.css
+++ b/public/vacature.css
@@ -62,14 +62,16 @@ aside {
     justify-content: center;
     align-items: center;
     gap: 2em;
-    padding: 1em;
+    padding: var(--spacing-32) var(--spacing-16);
     border-top: var(--border);
-    & h2 {
+    & p {
+        font-size: 1.25em;
     }
     & a {
         display: flex;
         justify-content: center;
         align-items: center;
         gap: .25em;
+        font-weight: 700;
     }
 }
