--- a/views/vacature.liquid
+++ b/views/vacature.liquid
@@ -22,8 +22,9 @@
 
     <p>Locatie:  {{ vacatures.locatie }}</p>
 
-    <h2>solliciteren</h2>
-    <a class="btn" href="vacature/{{ vacature.id }}">bekijken <img src="../assets/blue-arrow-up.svg"></a>
+    <p>Datum geplaatst:  {{ vacatures.date_posted |  date: "%B %d, %Y" }}</p>
+
+    <a class="btn" href="vacature/{{ vacature.id }}">Sollicitatie bekijken <img src="../assets/blue-arrow-up.svg"></a>
 </aside>
 
 {% render 'partials/footer.liquid' %}
