--- a/public/style.css
+++ b/public/style.css
@@ -100,7 +100,7 @@ nav {
         color: var(--black);
         font-family: var(--secondary-font);
         font-size: var(--size-sm);
-        margin: 1rem 0;
+        font-weight: 340;
         & img {
             margin-right: 5px;
         }
