--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -19,7 +19,7 @@
     </div>
     <div class="filter-btns">
         <div class="select-container">
-            <label hidden for="titel">provincie</label>
+            <label hidden for="provincie">provincie</label>
             <select class="select-btn" name="provincie">
                 <option value="">provincie</option>
                 <option value="Noord-Holland">Noord-Holland</option>
