Sprint review aanpassingen
Nog een paar kleine aanpassingen uit de sprint review. Declan gaf veel handige tips over responsive img's voor de performance van de website. En hoe dit van toepassing was op ons project.

--- a/public/vacature.css
+++ b/public/vacature.css
@@ -29,8 +29,8 @@
     }
     & .sfeerphoto {
         border-top: var(--border);
-        width: 100%;
-        height: 300px;
+        width: 80vw;
+        height: 400px;
         object-fit: cover;
         padding: var(--spacing-16);
     }
