--- a/public/style.css
+++ b/public/style.css
@@ -380,6 +380,13 @@ footer {
             opacity: .4;
         }
     }
+    & label {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: var(--spacing-8);
+    }
     & input {
         height: 30px;
         width: 300px;
@@ -444,3 +451,12 @@ footer {
         opacity: 1;
     }
 }
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+  }
