--- a/views/partials/footer.liquid
+++ b/views/partials/footer.liquid
@@ -12,7 +12,7 @@
     </section>
     <section>
         <div class="dda-loc">
-            <bold>Dutch Digital Agencies</bold>
+            <b>Dutch Digital Agencies</b>
             <p>Overhoeksplein 1<br>1031 KS Amsterdam</p>
         </div>
         <div class="dda-info">
