Nav tijdelijjk PE gemaakt #4
Navigatie even tijdelijk doorgestuurd naar de footer navigatie. Volgende sprint ga ik hier een responsive PE menu van maken.

--- a/views/partials/footer.liquid
+++ b/views/partials/footer.liquid
@@ -3,7 +3,7 @@
         <img src="../assets/logo.svg" alt="Logo" class="logo">
     </section>
     <section>
-        <a href="/overons.liquid">Over Ons</a>
+        <a id="overons" href="/overons.liquid">Over Ons</a>
         <a href="/events.liquid">Events</a>
         <a href="/publicaties.liquid">Publicaties</a>
         <a href="/leden.liquid">Leden</a>
