--- a/views/partials/header.liquid
+++ b/views/partials/header.liquid
@@ -13,10 +13,10 @@
                 <li><a href="/wordlid">word lid</a></li>
             </ul>
         </div>
-        <button class="ham-button" aria-label="navigatie menu">
+        <a href="#overons" class="ham-button">
             <span></span>
             <span></span>
             <span></span>
-        </button>
+        </a>
     </nav>
 </header>
