--- a/public/style.css
+++ b/public/style.css
@@ -250,7 +250,7 @@ footer {
     flex-direction: column;
     align-items: left;
     border-top: 2px solid var(--black);
-    & section {
+    & .ftr-container {
         display: flex;
         flex-direction: column;
         gap: var(--spacing-8);
@@ -290,17 +290,17 @@ footer {
         }
 
     }
-    section:nth-child(1) {
+    div:nth-child(1) {
         grid-area: logo;
     }
-    section:nth-child(2) {
+    div:nth-child(2) {
         grid-area: info1;
     }
-    & section:nth-child(3) {
+    & div:nth-child(3) {
         gap: var(--spacing-24);
         grid-area: info2;
     }
-    & section:nth-child(4) {
+    & div:nth-child(4) {
         gap: var(--spacing-24);
         grid-area: footer;
         @media (min-width: 650px){
