--- a/views/partials/footer.liquid
+++ b/views/partials/footer.liquid
@@ -1,16 +1,16 @@
 <footer>
-    <section>
+    <div class="ftr-container">
         <img src="../assets/logo.svg" alt="Logo" class="logo">
-    </section>
-    <section>
+    </div>
+    <div class="ftr-container">
         <a id="overons" href="/overons.liquid">Over Ons</a>
         <a href="/events.liquid">Events</a>
         <a href="/publicaties.liquid">Publicaties</a>
         <a href="/leden.liquid">Leden</a>
         <a href="/vacatures.liquid">Vacatures</a>
         <a href="/privcacy.liquid">Privacybeleid</a>
-    </section>
-    <section>
+    </div>
+    <div class="ftr-container">
         <div class="dda-loc">
             <b>Dutch Digital Agencies</b>
             <p>Overhoeksplein 1<br>1031 KS Amsterdam</p>
@@ -19,13 +19,13 @@
             <a>(0)85 4010391</a>
             <a>info@dutchdigitalagencies.com</a>
         </div>
-    </section>
-    <section>
+    </div>
+    <div class="ftr-container">
         <ul>
             <li><a href="/instagram">Instagram</a></li>
             <li><a href="/facebook">Facebook</a></li>
             <li><a href="/linkedin">LinkedIn</a></li>
         </ul>
         <p>Copyright © 2025 Dutch Digital Agencies</p>
-    </section>
+    </div>
 </footer>
