--- a/views/vacature.liquid
+++ b/views/vacature.liquid
@@ -1,5 +1,9 @@
 {% render 'partials/head.liquid', title:"vacature" %}
+<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="/stylesheet.css">
+<link rel="stylesheet" href="/vacature.css">
 {% render 'partials/header.liquid' %}
+
 
 <main class="vacancie-container">
     <div>
