--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -1,4 +1,6 @@
 {% render 'partials/head.liquid', title: 'Vacatures' %}
+<link rel="stylesheet" href="/stylesheet.css">
+<link rel="stylesheet" href="/style.css">
 
 {% render 'partials/header.liquid' %}
 
