--- a/views/partials/footer.liquid
+++ b/views/partials/footer.liquid
@@ -16,8 +16,8 @@
             <p>Overhoeksplein 1<br>1031 KS Amsterdam</p>
         </div>
         <div class="dda-info">
-            <a>(0)85 4010391</a>
-            <a>info@dutchdigitalagencies.com</a>
+            <a href="tel:(0)85 4010391">(0)85 4010391</a>
+            <a href="mailto:info@dutchdigitalagencies.com">info@dutchdigitalagencies.com</a>
         </div>
     </div>
     <div class="ftr-container">
