--- a/views/partials/header.liquid
+++ b/views/partials/header.liquid
@@ -13,10 +13,8 @@
                 <li><a href="/wordlid">word lid</a></li>
             </ul>
         </div>
-        <a href="#overons" class="ham-button">
-            <span></span>
-            <span></span>
-            <span></span>
+        <a href="#overons" class="hamburger-menu">
+            <img src="/assets/hamburger.svg" alt="Gan naar menu beneden">
         </a>
     </nav>
 </header>
