--- a/public/style.css
+++ b/public/style.css
@@ -20,7 +20,7 @@ header {
     width: 100%;
     display: flex;
     align-items: center;
-    padding: var(--spacing-12) var(--spacing-16);
+    padding: var(--spacing-24) var(--spacing-16);
     border-bottom: var(--border);
     background-color: var(--white);
     & img {
@@ -32,7 +32,11 @@ header {
 nav {
     width: 100%;
     display: flex;
-    & .ham-button {
+    & .hamburger-menu {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         position: relative;
         margin-left: auto;
         border: var(--border);
@@ -57,6 +61,13 @@ nav {
         }
         & span:nth-child(3) {
             top: 70%;
+        }
+        & p {
+            color: var(--black);
+            font-size: 0.875rem;
+            position: absolute;
+            top: 110%;
+            text-align: center;
         }
     }
     & .hidden-menu {
