--- a/views/vacatures.liquid
+++ b/views/vacatures.liquid
@@ -167,7 +167,7 @@
     // Let op: hiermee overschrijven we de default Loading state van de browser...
     event.preventDefault()
 
-
+    // Toont de loading state met de tekst op de button
     btnTxt.innerHTML = 'Aan het toevoegen...';
     loader.classList.add('show');
     loader.classList.remove('hide');
